--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,10 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 :root {
-  --background: #ffffff;
+  --background: #f4f7f6;
   --foreground: #171717;
 }
 
