--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,5 @@
 $primary-bg: #f4f7f6;
 
-
 .board {
   display: flex;
   justify-content: space-around;
@@ -14,6 +13,14 @@ $primary-bg: #f4f7f6;
 }
 
 .app-container {
+  .drag-overlay-card {
+    @apply w-[90vw] max-w-md min-h-[90px] bg-gray-100 rounded-md p-4 cursor-grabbing shadow-xl;
+
+    .drag-overlay-text {
+      @apply m-0 break-words whitespace-normal text-sm;
+    }
+  }
+
   background-color: $primary-bg;
   h1 {
     display: flex;
@@ -24,4 +31,3 @@ $primary-bg: #f4f7f6;
     padding: 20px;
   }
 }
-
