--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,14 +1,10 @@
 $primary-bg: #f4f7f6;
 
 .board {
-  display: flex;
-  justify-content: space-around;
-  gap: 20px;
-  padding: 20px;
-  background-color: $primary-bg;
+  @apply flex justify-around gap-5 p-5 bg-[#f4f7f6];
+
   @media (max-width: 768px) {
-    flex-direction: column;
-    align-items: center;
+    @apply flex flex-col items-center;
   }
 }
 
@@ -23,11 +19,6 @@ $primary-bg: #f4f7f6;
 
   background-color: $primary-bg;
   h1 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    font-size: 28px;
-    padding: 20px;
+    @apply flex items-center justify-center font-bold text-[28px] p-5;
   }
 }
