--- a/app/styles/loading.scss
+++ b/app/styles/loading.scss
@@ -66,12 +66,12 @@
 }
 
 .skeleton-column {
-  flex: 1;
-  margin: 0 10px;
-  padding: 20px;
-  background: #f8f9fa;
-  border-radius: 8px;
-  min-height: 600px;
+  @apply w-full min-w-[280px] p-4 flex flex-col;
+  height: calc(100vh - 290px);
+
+  @media (max-width: 768px) {
+    @apply w-[30%];
+  }
 
   .skeleton-title {
     height: 60px;
